# PyBEP

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
battery_ocv_decomposition/: GUI.py  add_battery.py  add_curves.py  calculations.py  main_script.py  optimization_functions.py  setup.py
battery_ocv_decomposition/cathode_data/: cathode_NMC111.txt  cathode_NMC523.txt  cathode_NMC811.txt
battery_ocv_decomposition/src/: GUI.py  add_battery.py  add_curves.py  main_script.py  optimization_functions.py
data/: Battery_OCV_C_-5%_degraded.txt  Battery_OCV_C_A_-5%_5%_degraded.txt  LFPvsGraphite_OCV-10.1109_ACCESS.2019.2926517.txt  NMC523vsGraphite_OCV-LICeM.txt  NMC811vsGraphite_OCV-10.1016_j.xcrp.2020.100253.txt  NMC811vsGraphite_OCV-LICeM.txt  battery_data_1.txt  battery_data_NMC_LICEM.txt
data/anode_data/: Graphite-10.1016_j.xcrp.2020.100253.txt  anode_Graphite.txt
data/cathode_data/: LFP-10.1149_1.3567007.txt  NMC523-10.1149_2.1701713jes.txt  cathode_Gray.txt  cathode_LFP.txt  cathode_NMC622.txt
degradation_analyzation/: optimization_result.json
degradation_analyzation/A1D/: A1D.txt
degradation_analyzation/C1D/: C1D.txt
results/: test.json
src/: add_battery.py  add_curves.py  main_script.py
src/OCV_GUI_module/: GUI.py  GUI_from_terminal.py  __main__.py  add_battery.py  add_curves.py
src/battery_OCV_decomposition/: GUI.py  add_battery.py  main_script.py  optimization_functions.py
