[metadata]
name = battery_OCV_decomposition
version = 1.0.0
author = Jon Pišek
author_email = jon.pisek@gmail.com
description = Simple Python package with a built-in GUI that makes battery OCV decomposition a piece of cake.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JonPisek/package_directory
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    joblib
    Pillow

[options.package_data]
* = data/*.txt, LICEM/*.jpg, results/*.json

[options.entry_points]
console_scripts =
    run_battery_OCV_decomposition = src.battery_OCV_decomposition.GUI:main

[metadata.classifiers]
Development Status :: 3 - Alpha
Programming Language :: Python :: 3.8
License :: OSI Approved :: MIT License
Operating System :: OS Independent
