[metadata]
name = battery_OCV_decomposition
version = 1.0.0
author = Jon Pišek
author_email = jon.pisek@gmail.com
description = Simple Python package with a built-in GUI that makes battery OCV decomposition a piece of cake.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JonPisek/package_directory
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    joblib

[options.packages.find]
where = src

[options.package_data]
battery_OCV_decomposition_project = 
    data/*.txt
    LICEM/*.jpg
    results/*.json
